--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.braintreepayments.api:drop-in:5.2.2'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
 }
